# temp_ros2_issue_spawn_two_robot

log/: latest_build
src/learn_robotics_with_ROS_youtube_channel/multiple_robot/: CMakeLists.txt  package.xml
src/learn_robotics_with_ROS_youtube_channel/multiple_robot/launch/: multi_robot.launch.py
src/learn_robotics_with_ROS_youtube_channel/multiple_robot/rviz/: multi_robot.rviz
src/learn_robotics_with_ROS_youtube_channel/multiple_robot/urdf/: robot1.urdf  robot2.urdf
src/learn_robotics_with_ROS_youtube_channel/my_multi_robot/my_robot_bringup/: package.xml
src/learn_robotics_with_ROS_youtube_channel/my_multi_robot/my_robot_description/: CMakeLists.txt  package.xml
src/learn_robotics_with_ROS_youtube_channel/my_multi_robot/my_robot_gazebo/: CMakeLists.txt  README.md  package.xml
src/learn_robotics_with_ROS_youtube_channel/robot_arm/: CMakeLists.txt  package.xml
src/learn_robotics_with_ROS_youtube_channel/robot_arm/config/: controller.yaml  rviz2_config.rviz
src/learn_robotics_with_ROS_youtube_channel/robot_arm/launch/: display_robot_arm.launch.py
src/learn_robotics_with_ROS_youtube_channel/robot_arm/urdf/: cube_pick_place.urdf.xacro  gripper.xacro  main_robot_arm.urdf  robot_arm.urdf.xacro  robot_arm_macros.xacro
src/learn_ros2_control/demo_control/: CMakeLists.txt  package.xml
src/learn_ros2_control/demo_control/config/: config.rviz  robot_controller.yaml
src/learn_ros2_control/demo_control/launch/: display.launch.py
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_py_pkg/: package.xml  setup.py
(+11 files in other folders)
